# stats

./: .pre-commit-config.yaml  README.md  pyproject.toml  weight.csv
data/: weight.csv
data/journal/: january.org
data/training/: heart_rate.csv
stats/: constants.py  visualize.py
