[tool.poetry]
name = "stats"
version = "0.1.0"
description = "visualizing my stats"
authors = ["Joseph Daws <daws.joseph@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.6.3"
pandas = "^1.5.2"

[tool.poetry.dev-dependencies]
pre-commit = "^2.21.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
